<resources>
    <string name="app_name">motocare</string>
    <string name="lbl_sotien">Số Tiền</string>
    <string name="lbl_donhang">ĐƠN HÀNG</string>
    <string name="btn_create_order">Tạo Đơn Hàng</string>
    <string name="txt_amount_init">50000</string>
    <string name="txt_amount_hint">50000</string>
    <string name="btn_pay">Thanh Toán</string>
    <string name="lbl_zptranstoken">zptranstoken</string>
    <string name="to_webview">To WebView</string>
</resources>
